[tool.poetry]
name = "ghg-prediction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pylint = "^3.3.1"
black = "^24.8.0"
pytest = "^8.3.3"
pyright = "^1.1.383"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
